--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             const input=document.querySelector("input"),
             emailIcon=document.querySelector(".email-icon");
             input.addEventListener("keyup",()=>{
-                let pattern = /^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
+                //regex pour verifier si l'email est valide
+                let pattern=/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
                 if(input.value===""){
-                    return console.log("empty");
+                    emailIcon.classList.replace("uil-check-circle","uil-envelope");
+                 return emailIcon.style.color="#b4b4b4";
 
                 }
                if(input.value.match(pattern)){
@@ -30,8 +32,9 @@
                     return emailIcon.style.color="green";
                }  
                 else{
+                    emailIcon.classList.replace("uil-check-circle","uil-envelope");
                  //    emailIcon.classList.remove("active");
-                 console.log("invalid");
+                 return emailIcon.style.color="#de0611";
                 } 
                 
             })
